--- a/OneDo/App.xaml
+++ b/OneDo/App.xaml
@@ -9,8 +9,8 @@
         <ResourceDictionary>
             <ResourceDictionary.ThemeDictionaries>
                 <ResourceDictionary x:Key="Default">
-                    <Color x:Key="FlagForegroundColor">#E81123</Color>
-                    <Color x:Key="FlagBackgroundColor">#FFFFE0</Color>
+                    <Color x:Key="FlagForegroundColor">#E32A34</Color>
+                    <Color x:Key="FlagBackgroundColor">#FFFFCC</Color>
                     <SolidColorBrush x:Key="FlagForegroundBrush" Color="{ThemeResource FlagForegroundColor}" />
                     <SolidColorBrush x:Key="FlagBackgroundBrush" Color="{ThemeResource FlagBackgroundColor}" />
                 </ResourceDictionary>
