--- a/OneDo/View/Controls/FolderListControl.xaml
+++ b/OneDo/View/Controls/FolderListControl.xaml
@@ -351,18 +351,20 @@
                     BorderThickness="1,1,1,0">
                 <FlyoutBase.AttachedFlyout>
                     <MenuFlyout>
-                        <controls:MenuFlyoutIconItem Command="{x:Bind FolderCommands.EditCommand}"
-                                                     CommandParameter="{x:Bind Mode=OneWay}"
-                                                     Glyph="&#xE70F;"
-                                                     Text="Edit" />
-                        <controls:MenuFlyoutIconItem Command="{x:Bind FolderCommands.DeleteCommand}"
-                                                     CommandParameter="{x:Bind Mode=OneWay}"
-                                                     Glyph="&#xE74D;"
-                                                     Text="Delete" />
+                        <MenuFlyoutItem Style="{StaticResource MenuFlyoutItemWithIconStyle}"
+                                        behaviors:FlyoutMenuItemBehavior.Glyph="&#xE70F;"
+                                        Command="{x:Bind FolderCommands.EditCommand}"
+                                        CommandParameter="{x:Bind Mode=OneWay}"
+                                        Text="Edit" />
+                        <MenuFlyoutItem Style="{StaticResource MenuFlyoutItemWithIconStyle}"
+                                        behaviors:FlyoutMenuItemBehavior.Glyph="&#xE74D;"
+                                        Command="{x:Bind FolderCommands.DeleteCommand}"
+                                        CommandParameter="{x:Bind Mode=OneWay}"
+                                        Text="Delete" />
                     </MenuFlyout>
                 </FlyoutBase.AttachedFlyout>
                 <i:Interaction.Behaviors>
-                    <behaviors:FlyoutMenuBehavior />
+                    <behaviors:OpenFlyoutMenuBehavior />
                     <ic:EventTriggerBehavior EventName="PointerEntered">
                         <ic:ChangePropertyAction PropertyName="Background" Value="{ThemeResource SystemControlBackgroundListLowBrush}" />
                         <ic:ChangePropertyAction PropertyName="BorderBrush" Value="{ThemeResource SystemControlForegroundBaseLowBrush}" />
